Updated gameplay functions and some styling

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <div>
-        <div id = 'gameboard'>
-            
+        <div id = 'gameboard'>    
         </div>
+        <div id = 'overlay'></div>
     </div>
     <script src = 'index.js'></script>
 </body>
