--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
     <meta charset="utf-8">
     <title>TicTacToe</title>
     <link rel = 'stylesheet' href = 'index.css'>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+    </style> 
 </head>
 <body>
     <div>
-        <div id = 'gameboard'>    
+        <h1 id = 'title'>Tic-Tac-Toe</h1>
+        <div id = 'start-overlay'>
+            <form id = 'start-content'>
+                <div class = 'p1-label'>
+                <label for = 'p1name'>Player 1</label>
+                </div>
+                <div class = 'p1-name'>
+                <input type = 'text' id = 'p1name' name = 'p1name'>
+                </div>
+                <div class = 'p2-label'>
+                <label for = 'p2name'>Player 2</label>
+                </div>
+                <div class = 'p2-name'>
+                <input type = 'text' id = 'p2name' name = 'p2name'>
+                </div>
+                <div class = 'play-button-cell'>
+                <button type = 'button' id = 'play-button'>Play</button>
+                </div>
+            </form>
+        </div>
+         <div id = 'gameboard'>    
         </div>
         <div id = 'overlay'></div>
     </div>
