added capability to add player names

--- a/index.html
+++ b/index.html
@@ -13,20 +13,16 @@
         <h1 id = 'title'>Tic-Tac-Toe</h1>
         <div id = 'start-overlay'>
             <form id = 'start-content'>
-                <div class = 'p1-label'>
-                <label for = 'p1name'>Player 1</label>
+                <div class = 'p1-form'>
+                  <label for = 'p1name'>Player 1</label>
+                  <input type = 'text' id = 'p1name' name = 'p1name'>
                 </div>
-                <div class = 'p1-name'>
-                <input type = 'text' id = 'p1name' name = 'p1name'>
+                <div class = p2-form>
+                  <label for = 'p2name'>Player 2</label>
+                  <input type = 'text' id = 'p2name' name = 'p2name'>
                 </div>
-                <div class = 'p2-label'>
-                <label for = 'p2name'>Player 2</label>
-                </div>
-                <div class = 'p2-name'>
-                <input type = 'text' id = 'p2name' name = 'p2name'>
-                </div>
-                <div class = 'play-button-cell'>
-                <button type = 'button' id = 'play-button'>Play</button>
+                <div class = 'play'>
+                  <button type = 'button' id = 'play-button'>Play</button>
                 </div>
             </form>
         </div>
