Added some labels

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div class = 'p1-form'>
                   <label for = 'p1name'>Player 1</label>
                   <input type = 'text' id = 'p1name' name = 'p1name' placeholder="Name">
+                  <div class = 'color-label'>Marker color</div>
                   <div id = 'p1-color'>
                     <div class = 'p1-color-select' data-color = 'blue'></div>
                     <div class = 'p1-color-select' data-color = 'red'></div>
@@ -32,6 +33,7 @@
                 <div class = p2-form>
                   <label for = 'p2name'>Player 2</label>
                   <input type = 'text' id = 'p2name' name = 'p2name' placeholder="Name">
+                  <div class = 'color-label'>Marker color</div>
                   <div id = 'p2-color'>
                     <div class = 'p2-color-select' data-color = 'blue'></div>
                     <div class = 'p2-color-select' data-color = 'red'></div>
